{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 68,
  "lineage": "962e8bd5-0276-9632-cd23-c0850b85dcdb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:326213389784:transit-gateway/tgw-08726d1d3714064ac",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "enable",
            "dns_support": "enable",
            "id": "tgw-08726d1d3714064ac",
            "multicast_support": "disable",
            "owner_id": "326213389784",
            "propagation_default_route_table_id": "tgw-rtb-0ab2845d0862c9540",
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rtb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:transit-gateway-route-table/tgw-rtb-03abbc08895ca7e84",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-03abbc08895ca7e84",
            "transit_gateway_id": "tgw-08726d1d3714064ac"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:transit-gateway-route-table/tgw-rtb-01051e3c7a862c32e",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-01051e3c7a862c32e",
            "transit_gateway_id": "tgw-08726d1d3714064ac"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgwrtb-tgwatch1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-03abbc08895ca7e84_tgw-attach-033467cf8e6edd512",
            "resource_id": "vpc-089b7216507b80dbd",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-033467cf8e6edd512",
            "transit_gateway_route_table_id": "tgw-rtb-03abbc08895ca7e84"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb1",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment1",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgwrtb-tgwatch2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-01051e3c7a862c32e_tgw-attach-05ca2f1de54e1c576",
            "resource_id": "vpc-0f0ad22034b22d500",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-05ca2f1de54e1c576",
            "transit_gateway_route_table_id": "tgw-rtb-01051e3c7a862c32e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb2",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment2",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rtbprop1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-03abbc08895ca7e84_tgw-attach-033467cf8e6edd512",
            "resource_id": "vpc-089b7216507b80dbd",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-033467cf8e6edd512",
            "transit_gateway_route_table_id": "tgw-rtb-03abbc08895ca7e84"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb1",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment1",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rtbprop2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-01051e3c7a862c32e_tgw-attach-05ca2f1de54e1c576",
            "resource_id": "vpc-0f0ad22034b22d500",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-05ca2f1de54e1c576",
            "transit_gateway_route_table_id": "tgw-rtb-01051e3c7a862c32e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb2",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment2",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-033467cf8e6edd512",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-07bb4b1f8a17467a3"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-08726d1d3714064ac",
            "vpc_id": "vpc-089b7216507b80dbd",
            "vpc_owner_id": "326213389784"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-05ca2f1de54e1c576",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-03feb42a24fa66063"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-08726d1d3714064ac",
            "vpc_id": "vpc-0f0ad22034b22d500",
            "vpc_owner_id": "326213389784"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcrtb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-051c45878a58c5340",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.193.220.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-08726d1d3714064ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-089b7216507b80dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcrtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0bb667d091c735657",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.193.221.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-08726d1d3714064ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-0f0ad22034b22d500"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetsforvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:subnet/subnet-07bb4b1f8a17467a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.193.220.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bb4b1f8a17467a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326213389784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1sub 1"
            },
            "tags_all": {
              "Name": "1sub 1"
            },
            "vpc_id": "vpc-089b7216507b80dbd"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetsforvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:subnet/subnet-03feb42a24fa66063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.193.221.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03feb42a24fa66063",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326213389784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2sub 1"
            },
            "tags_all": {
              "Name": "2sub 1"
            },
            "vpc_id": "vpc-0f0ad22034b22d500"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:vpc/vpc-089b7216507b80dbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.193.220.0/24",
            "default_network_acl_id": "acl-0580ab7a81cde29cf",
            "default_route_table_id": "rtb-09397249892eefdba",
            "default_security_group_id": "sg-03ed6eceb1f30506e",
            "dhcp_options_id": "dopt-0c9a4e60c7b3a347f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-089b7216507b80dbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09397249892eefdba",
            "owner_id": "326213389784",
            "tags": {
              "Name": "use1-prod-vpc 1"
            },
            "tags_all": {
              "Name": "use1-prod-vpc 1"
            }
          }
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:vpc/vpc-0f0ad22034b22d500",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.193.221.0/24",
            "default_network_acl_id": "acl-0e362f11ae10dab7e",
            "default_route_table_id": "rtb-0a0eaaa26b43e4ccf",
            "default_security_group_id": "sg-089c1bb9ac0089da9",
            "dhcp_options_id": "dopt-0c9a4e60c7b3a347f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f0ad22034b22d500",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0eaaa26b43e4ccf",
            "owner_id": "326213389784",
            "tags": {
              "Name": "use1-prod-vpc 2"
            },
            "tags_all": {
              "Name": "use1-prod-vpc 2"
            }
          }
        }
      ]
    }
  ]
}